# kma-information-retrieval

./: .gitignore  Cargo.toml  TASK.md
src/: coordinate_index.rs  incidence_matrix.rs  lib.rs  main.rs  parquet_loader.rs  parser.rs  permutation_index.rs  spimi.rs  suffix_tree.rs  wildcard_search.rs
task1/: Cargo.toml
task1/src/: bigram_index.rs  coordinate_index.rs  dictionary.rs  incidence_matrix.rs  inverted_index.rs  lib.rs  main.rs  parser.rs  permutation_index.rs  query.rs  spimi.rs  suffix_tree.rs  trigram_index.rs  wildcard_search.rs
