[package]
name = "grimoire"
version = "0.1.0"
edition = "2021"

[dependencies]
quick-xml = "0.31"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
clap = { version = "4.4", features = ["derive"] }
walkdir = "2.4"
indicatif = "0.17"
rayon = "1.8"
bit-vec = { version = "0.6", features = ["serde"] }
arrow = "53.0"
parquet = "53.0"
tokio = { version = "1.0", features = ["full"] }
tempfile = "3.8"
